# platformer_basics

./: .gitignore  CMakeLists.txt  README.md  main.cpp
configs/: collision_configs.hpp  player_initialization_config.hpp  window_configs.hpp
src/: CMakeLists.txt
src/core_objects/: collider.cpp  collider.hpp  game_object.cpp  game_object.hpp  player.cpp  player.hpp
src/core_objects/primitives/: bounds.hpp  vector_2.cpp  vector_2.hpp
src/core_objects/world/: room.cpp  room.hpp
src/game_loop/: engine.cpp  engine.hpp  game.cpp  game.hpp  game_manager.cpp  game_manager.hpp
